Switch more btns to components and fix vewscript bottom text alignment

--- a/src/components/ViewScript/ViewScript.css
+++ b/src/components/ViewScript/ViewScript.css
@@ -1,5 +1,5 @@
 .bottom-text {
-  margin: 0 0 1rem 0;
+  margin: -2rem 0 1rem 0;
   padding: 0 1rem;
   width: 100%;
   padding: 0.5rem 0.5rem;
@@ -12,6 +12,6 @@
 @media(max-width: 768px) {
   
   .bottom-text {
-    width: 80%;
+    width: 90%;
   }
 }
